--- a/anvio/workflows/metagenomics/Snakefile
+++ b/anvio/workflows/metagenomics/Snakefile
@@ -747,7 +747,10 @@ if M.get_param_value_from_config(['megahit','run']) and M.has_sr:
         # are not retaineded (it is not enough to define the directory as temporary
         # because when failing in the middle of a run, snakemake doesn't delete directories)
         run:
-            cmd = "megahit -1 {input.r1} -2 {input.r2} " + \
+            r1 = ','.join(input.r1)
+            r2 = ','.join(input.r2)
+
+            cmd = "megahit -1 %s -2 %s " % (r1, r2) + \
                 "-o {params.temp_dir} " + \
                 "-t {threads} " + \
                 "{params.min_contig_len} {params.min_count} {params.k_min} " + \
