--- a/anvio/workflows/metagenomics/Snakefile
+++ b/anvio/workflows/metagenomics/Snakefile
@@ -868,6 +868,8 @@ rule minimap2_index:
         env_prefix = lambda wildcards: env_prefix('minimap2'),
         additional_params = M.get_param_value_from_config(["minimap2_index", "additional_params"]),
         outdir = M.dirs_dict["MAPPING_DIR"] + "/{group}"
+    threads: M.T('minimap2_index')
+    resources: nodes = M.T('minimap2_index')
     shell:
         r"""
         mkdir -p {params.outdir}
@@ -891,6 +893,7 @@ rule minimap2:
         preset = M.get_param_value_from_config(["minimap2", "preset"]),
         additional_params = M.get_param_value_from_config(["minimap2", "additional_params"])
     threads: M.T("minimap2")
+    resources: nodes = M.T('minimap2')
     shell:
         r"""
         {params.env_prefix} minimap2 -x {params.preset} -t {threads} -a {params.additional_params} {input.idx} {input.reads} -o {output.sam} 2>> {log}
